Changes to be committed: 	modified:   src/main/index.ts 	modified:   src/preload/index.ts 	modified:   src/renderer/components/layout/HeaderLayout.vue   modified:   src/renderer/locales/de.json 	modified:   src/renderer/router/index.ts 	new file:   src/renderer/screens/BaustellenverwaltungScreen.vue 	modified:   src/renderer/screens/SecondScreen.vue   modified:   src/renderer/screens/index.ts

--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -8,6 +8,7 @@
   "title": {
     "main": "Hauptbildschirm",
     "second": "Zweiter Bildschirm",
+    "baustellenverwaltung": "Baustellenverwaltung",
     "error": "Ein Fehler ist aufgetreten"
   },
   "menu": {
