modified:   src/preload/index.ts 	modified:   src/renderer/components/layout/HeaderLayout.vue 	modified:   src/renderer/locales/de.json 	modified:   src/renderer/plugins/i18n.ts 	modified:   src/renderer/router/index.ts 	modified:   src/renderer/screens/BaustellenverwaltungScreen.vue 	new file:   src/renderer/screens/PersonalScreen.vue 	deleted:    src/renderer/screens/SecondScreen.vue 	modified:   src/renderer/screens/index.ts

--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -7,8 +7,8 @@
   },
   "title": {
     "main": "Hauptbildschirm",
-    "second": "Zweiter Bildschirm",
-    "baustellenverwaltung": "Baustellenverwaltung",
+    "personal": "Personal",
+    "baustellen": "Baustellen",
     "error": "Ein Fehler ist aufgetreten"
   },
   "menu": {
