Changes to be committed: 	modified:   src/main/IPCs.ts 	modified:   src/main/index.ts 	modified:   src/renderer/components/layout/HeaderLayout.vue 	modified:   src/renderer/locales/de.json 	modified:   src/renderer/screens/BaustellenScreen.vue

--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -6,7 +6,7 @@
     "selected-file": "Ausgewählte Datei: {filePath}."
   },
   "title": {
-    "main": "Hauptbildschirm",
+    "main": "Steinhof Verwaltung",
     "personal": "Personal",
     "baustellen": "Baustellen",
     "error": "Ein Fehler ist aufgetreten"
