Changes to be committed: 	modified:   buildAssets/builder/config.js 	modified:   package.json 	modified:   src/main/index.ts 	modified:   src/renderer/components/layout/HeaderLayout.vue 	modified:   src/renderer/locales/de.json 	modified:   src/renderer/router/index.ts 	new file:   src/renderer/screens/EinstellungenScreen.vue

--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -9,6 +9,7 @@
     "main": "Steinhof Verwaltung",
     "personal": "Personal",
     "baustellen": "Baustellen",
+    "einstellungen": "Einstellungen",
     "error": "Ein Fehler ist aufgetreten"
   },
   "menu": {
