modified:   src/preload/index.ts 	modified:   src/renderer/components/layout/HeaderLayout.vue 	modified:   src/renderer/locales/de.json 	modified:   src/renderer/router/index.ts 	new file:   src/renderer/screens/AuswertungScreen.vue 	modified:   src/renderer/screens/PersonalScreen.vue 	modified:   src/renderer/screens/index.ts

--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -10,6 +10,7 @@
     "personal": "Personal",
     "baustellen": "Baustellen",
     "einstellungen": "Einstellungen",
+    "auswertung": "Auswertung",
     "error": "Ein Fehler ist aufgetreten"
   },
   "menu": {
