new file:   CLAUDE.md 	modified:   package.json 	modified:   src/renderer/components/layout/HeaderLayout.vue 	modified:   src/renderer/locales/de.json 	modified:   src/renderer/screens/BaustellenScreen.vue 	modified:   src/renderer/screens/EinstellungenScreen.vue 	modified:   src/renderer/screens/PersonalScreen.vue 	new file:   src/renderer/store/auswertung.ts

--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -1,6 +1,6 @@
 {
   "desc": {
-    "welcome-title": "Hallo Vutron! Alles ist bereit.",
+    "welcome-title": " Alles ist bereit.",
     "welcome-desc": "Sie können jetzt plattformübergreifende Webanwendungen schreiben. Sehen Sie Ihre Änderungen in Echtzeit und erstellen Sie mit einem einzigen Befehl auf mehreren Plattformen. Wenn Sie damit noch nicht vertraut sind, können Sie Hilfe von der Dokumentationsseite unten erhalten oder vorgefertigten Beispielcode ausführen.",
     "second-desc": "Auf den zweiten Bildschirm verschoben! Hier gibt es keine!",
     "selected-file": "Ausgewählte Datei: {filePath}."
