--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -10,6 +10,8 @@
     "personal": "Personal",
     "baustellen": "Baustellen",
     "einstellungen": "Einstellungen",
+    "erfassung": "Erfassung",
+    "ergaenzung": "Ergänzung",
     "auswertung": "Auswertung",
     "error": "Ein Fehler ist aufgetreten"
   },
